@@ -1,3 +1,6 @@
+4556.	[security]	Combining dns64 and rpz can result in dereferencing
+			a NULL pointer (read).  (CVE-2017-3135) [RT#44434]
+
 	--- 9.9.9-P5 released ---
 
 4530.	[bug]		Change 4489 broke the handling of CNAME -> DNAME
